RESOLVED FIXED 190627
Some WK1 repaint tests are flakey
https://bugs.webkit.org/show_bug.cgi?id=190627
Summary Some WK1 repaint tests are flakey
Simon Fraser (smfr)
Reported 2018-10-16 10:18:17 PDT
compositing/repaint/iframes/compositing-iframe-scroll-repaint.html is flakey (maybe only with the patch from bug 90342). When it breaks, the compositing layer already has a repaint, so in GraphicsLayerCA::setNeedsDisplayInRect() the dirty rects already contain the rect and we bail. This suggests that testRunner.displayAndTrackRepaints() isn't triggering paints in all compositing layers in WK1; need to see if we're flushing layers at all in that code path.
Attachments
Patch (3.82 KB, patch)
2018-11-07 00:39 PST, Simon Fraser (smfr)
zalan: review+
ews-watchlist: commit-queue-
Archive of layout-test-results from ews121 for ios-simulator-wk2 (2.34 MB, application/zip)
2018-11-07 02:24 PST, EWS Watchlist
no flags
Radar WebKit Bug Importer
Comment 1 2018-10-22 14:22:49 PDT
Dawei Fenton (:realdawei)
Comment 2 2018-10-22 15:05:17 PDT
The following tests were marked flaky in Mojave WK1 compositing/masks/compositing-clip-path-change-no-repaint.html compositing/repaint/iframes/compositing-iframe-scroll-repaint.html compositing/repaint/iframes/compositing-iframe-with-fixed-background-doc-repaint.html revision: https://trac.webkit.org/changeset/237333/webkit
Simon Fraser (smfr)
Comment 3 2018-11-04 09:58:30 PST
It looks like we never get a -viewWillDraw after the load event and before zero-delay timers, which is controlled by whether runloop observers fire at that time; they may not if there is no idle phase in the runloop.
Simon Fraser (smfr)
Comment 4 2018-11-07 00:39:42 PST
EWS Watchlist
Comment 5 2018-11-07 02:24:18 PST
Comment on attachment 354069 [details] Patch Attachment 354069 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: https://webkit-queues.webkit.org/results/9891094 New failing tests: compositing/columns/composited-rl-paginated-repaint.html compositing/repaint/repaint-on-layer-grouping-change.html compositing/columns/composited-lr-paginated-repaint.html
EWS Watchlist
Comment 6 2018-11-07 02:24:20 PST
Created attachment 354077 [details] Archive of layout-test-results from ews121 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews121 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.6
Simon Fraser (smfr)
Comment 7 2018-11-07 13:47:29 PST
Alexey Proskuryakov
Comment 8 2019-05-11 16:18:57 PDT
*** Bug 189841 has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 9 2019-05-11 16:34:12 PDT
*** Bug 189752 has been marked as a duplicate of this bug. ***
Karl Rackler
Comment 10 2023-09-20 09:31:41 PDT
Since this issue persists, updating test expectations.
EWS
Comment 11 2023-09-20 09:39:50 PDT
Test gardening commit 268204@main (d4d29cc87cd9): <https://commits.webkit.org/268204@main> Reviewed commits have been landed. Closing PR #17976 and removing active labels.
Ben Schwartz
Comment 12 2023-10-10 17:15:57 PDT
Issue persists (and has further regressed) in macOS Sonoma. This test is now a consistent failure on the following platforms: - wk1 release - iOS 16+ wk2 release - Sonoma+ wk2 release. Filing new expectations under this bug and duping bug #177397 to this one.
Ben Schwartz
Comment 13 2023-10-10 17:43:35 PDT
CLARIFICATION: compositing/masks/compositing-clip-path-change-no-repaint.html is now a consistent failure on the following platforms: - macOS wk1 release - iOS wk2 release - Sonoma+ wk2 release. I will create a new bug for this one. The following tests are constantly failing on Sonoma wk1 and iOS wk2: compositing/repaint/iframes/compositing-iframe-scroll-repaint.html compositing/repaint/iframes/compositing-iframe-with-fixed-background-doc-repaint.html -> No action needed, as expectations already cover these tests. Verified issue resolved: compositing/columns/composited-lr-paginated-repaint.html compositing/columns/composited-rl-paginated-repaint.html compositing/repaint/repaint-on-layer-grouping-change.html
Note You need to log in before you can comment on or make changes to this bug.