Some WK1 repaint tests are flakey https://bugs.webkit.org/show_bug.cgi?id=190627

Reviewed by Zalan Bujtas.
Source/WebCore:

Repaint tracking in GraphicsLayerCA was sensitive to whether there were already dirty
rects on the layer, since tracking happened after checks against existing dirty rects.
This caused some WK1 repaint tests to be flakey, since there's no guarantee that
no repaints happen between the last layer flush and a test calling startTrackingRepaints().

Fix by moving the repaint tracking to before the checks against existing dirty rects.
This is more similar to how repaint tracking on FrameView works.

* platform/graphics/ca/GraphicsLayerCA.cpp:
(WebCore::GraphicsLayerCA::setNeedsDisplayInRect):

LayoutTests:

New baseline.

* compositing/masks/compositing-clip-path-change-no-repaint-expected.txt:

Canonical link: https://commits.webkit.org/206179@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237942 268f45cc-cd09-0410-ab3c-d52691b4dbfc